--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,15 +1,15 @@
-@import "variables";
-@import "skin";
+// @use "presets/variables";
+// @use "presets/skin";
+ 
+// @use "mixins/mixins-media";
+// @use "mixins/mixins";
+// @use "mixins/extends";
 
-@import "mixins-media";
-@import "mixins";
-@import "extends";
+@use "bootstrap-theming";
 
-@import "bootstrap-theming";
-
-@import "common";
-@import "header";
-@import "main";
-@import "page";
-@import "sidebar";
-@import "footer";
+@use "common";
+@use "header";
+@use "main";
+@use "page";
+@use "sidebar";
+@use "footer";
