--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -1,7 +1,139 @@
 @use "presets" as *;
-@use "mixins" as *; 
-
+@use "mixins" as *;
 
 .sidebar-left {
   margin-bottom: $gap-xl;
+}
+
+.vertical-slider {
+  border-radius: 4px;
+  overflow: hidden;
+
+  &__img {
+    width: 100%;
+  }
+}
+
+.user-login {
+  position: relative;
+
+  &__tabs {
+    position: absolute;
+    top: 0;
+    right: $gap-md;
+    border: none;
+
+    a {
+      padding: 14 px 5px 12px !important;
+      border: none !important;
+      color: $color-gray;
+      background-color: transparent !important;
+    }
+
+    .active a {
+      color: $color-white !important;
+    }
+  }
+}
+
+$image-size: 75px;
+$image-size-width-padding: $image-size + $gap-md;
+
+.site-news-item {
+  position: relative;
+  clear: both;
+
+  &:not(:last-child) {
+    min-height: $image-size-width-padding;
+    margin-bottom: $gap;
+
+    &::after {
+      position: absolute;
+      content: "";
+      right: 0;
+      bottom: -4px;
+      height: 1px;
+      width: calc(100% - #{$image-size-width-padding});
+      background-color: $color-gray;
+    }
+  }
+
+  &:hover {
+    a {
+      color: $color-accent;
+    }
+
+    .thumbnail {
+      background-color: $color-accent;
+      border-color: $color-accent;
+    }
+  }
+
+  &__thumbnail {
+    float: left;
+    width: $image-size;
+    margin: 0 $gap-md $gap-md 0;
+  }
+
+  &__title {
+    margin-bottom: 0.5em;
+
+    @include block-shortener(1rem, 1.5, 50px, 2);
+  }
+
+  &__link {
+    transition: 0.25s;
+  }
+
+  &__date {
+    text-align: right;
+    font-size: 0.8rem;
+    color: $color-gray-dark;
+  }
+}
+
+.top-films {
+  &__body {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  &__list {
+    margin-bottom: 0;
+  }
+
+  &__item {
+    margin-left: -1px;
+    margin-right: -1px;
+    padding-right: 55px;
+    background-color: transparent;
+    color: $color-primary !important;
+
+    &:first-child {
+      border-radius: 0;
+      border-bottom: none;
+    }
+
+    &:last-child {
+      border-radius: 0;
+      border-bottom: none;
+    }
+
+    &:hover,
+    &:focus {
+      background-color: $color-accent !important;
+      color: $color-white !important;
+      border-color: $color-dark;
+
+      .badge {
+        background-color: $color-dark;
+      }
+    }
+  }
+
+  &__badge {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: $gap;
+  }
 }
